# platform.upstream.libwlmessage

./: COPYING  Makefile.am  configure.ac  libwlmessage-wl.c  libwlmessage-x11.c  libwlmessage.c  libwlmessage.h  libwlmessage.pc.in  wlmessage_test.c
packaging/: libwlmessage.spec  wlmessage.spec
toytoolkit/: window.c
